--- a/source/deals-edit.html
+++ b/source/deals-edit.html
@@ -413,10 +413,16 @@
                 </div>
               </div>
               <div class="deals-edit__select-status">
+                <!--
+               Новая заявка - default
+                .underline-select--cancel
+                .underline-select--processing
+                 .underline-select--completed
+                -->
                 <div class="underline-select">
                   <button class="underline-select__toggle" type="button">
                     <span class="underline-select__current-value">
-                      Отменен
+                      Новая заявка
                     </span>
                     <svg width="14" height="7">
                       <use xlink:href="#icon-arrow"></use>
