--- a/source/main.html
+++ b/source/main.html
@@ -286,23 +286,6 @@
     </nav>
   </header>
   <main class="site-main">
-    <section class="breadcrumbs">
-      <div class="container">
-        <h2 class="visually-hidden">
-          Постраничная Навигация
-        </h2>
-        <ul class="breadcrumbs__list">
-          <li class="breadcrumbs__item">
-            <a href="/">
-              Главная
-            </a>
-          </li>
-          <li>
-            Поиск
-          </li>
-        </ul>
-      </div>
-    </section>
     <section class="promo">
       <div class="promo__inner container">
         <h1 class="h1 promo__title">
@@ -1162,7 +1145,8 @@
     <div class="seo-text seo-text--main-page">
       <div class="seo-text__inner container">
         <div class="seo-text__wrapper">
-          <p>
+          <p class="seo-text__info">
+            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового
             Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового
           </p>
         </div>
